--- a/public/admin.html
+++ b/public/admin.html
@@ -76,7 +76,10 @@
     position:relative;
     font-size:15px; padding:12px 16px; min-width:220px;
     background:#231a44;
+    color:#ffffff; /* ← agrega esta línea */
     box-shadow:0 10px 28px rgba(127,92,255,.35), 0 0 22px rgba(127,92,255,.22);
+}
+
   }
   .btn--main::before{
     content:""; position:absolute; inset:-2px; border-radius:14px; z-index:1;
