--- a/public/admin.html
+++ b/public/admin.html
@@ -74,9 +74,11 @@
   .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;position:relative;}
   .btn--main{
     position:relative;
-    font-size:15px; padding:12px 16px; min-width:220px;
+    font-size:15px; 
+    padding:12px 16px; 
+    min-width:220px;
     background:#231a44;
-    color:#ffffff; /* ← agrega esta línea */
+    color:#ffffff; /* ← SOLO ESTA LÍNEA NUEVA */
     box-shadow:0 10px 28px rgba(127,92,255,.35), 0 0 22px rgba(127,92,255,.22);
 }
 
