--- a/public/admin.html
+++ b/public/admin.html
@@ -71,35 +71,42 @@
   #btnRot{ font-size:13.0px; }
 
   /* ===== BOTÓN PRINCIPAL (AGREGAR CAJERA) CON NEÓN ===== */
-  .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;position:relative;}
   .btn--main{
     position:relative;
-    font-size:15px; 
-    padding:12px 16px; 
+    font-size:15px;
+    padding:12px 16px;
     min-width:220px;
     background:#231a44;
-    color:#ffffff; /* ← SOLO ESTA LÍNEA NUEVA */
+    color:#fff;
     box-shadow:0 10px 28px rgba(127,92,255,.35), 0 0 22px rgba(127,92,255,.22);
 }
-
-  }
-  .btn--main::before{
-    content:""; position:absolute; inset:-2px; border-radius:14px; z-index:1;
+.btn--main::before{
+    content:"";
+    position:absolute;
+    inset:-2px;
+    border-radius:14px;
+    z-index:1;
     background:conic-gradient(from 30deg, var(--neonA) 0%, var(--neonB) 14%, var(--neonA) 28%, var(--neonA) 100%);
     -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
-    -webkit-mask-composite:xor; mask-composite:exclude;
-    padding:2px; filter:saturate(120%) blur(.35px) opacity(.95);
-  }
-  .btn--main::after{
-    content:""; position:absolute; z-index:0; inset:-16px; border-radius:28px;
+    -webkit-mask-composite:xor;
+    mask-composite:exclude;
+    padding:2px;
+    filter:saturate(120%) blur(.35px) opacity(.95);
+}
+.btn--main::after{
+    content:"";
+    position:absolute;
+    z-index:0;
+    inset:-16px;
+    border-radius:28px;
     background: radial-gradient(45% 70% at 50% 50%, rgba(127,92,255,.55), rgba(127,92,255,.22) 55%, transparent 75%);
     filter:blur(16px);
     animation:breath 2.8s ease-in-out infinite;
-  }
-  @keyframes breath{
+}
+@keyframes breath{
     0%,100%{ transform:scale(0.96); opacity:.85; }
     50%    { transform:scale(1.06); opacity:1;   }
-  }
+}
 
   /* ===== LISTA: NOMBRE | WAlink | BORRAR ===== */
   #list{margin-top:24px;}
