--- a/public/admin.html
+++ b/public/admin.html
@@ -48,7 +48,6 @@
     white-space:nowrap;font-weight:600;letter-spacing:.2px;text-align:center;
     box-shadow:0 6px 18px rgba(40,0,120,.22);z-index:0;
     display:flex;align-items:center;justify-content:center;
-    height:36px;font-size:12.5px;
   }
   .btn:hover{filter:brightness(1.08)}
   .btn > *{position:relative;z-index:2}
@@ -60,6 +59,8 @@
     -webkit-mask-composite:xor;mask-composite:exclude;padding:1px;
     filter:saturate(90%) blur(.15px) opacity(.85);
   }
+  /* tamaño compacto uniforme para botones chicos */
+  .btn--sm{height:36px;font-size:12.5px;padding:8px 10px}
 
   /* ===== TOP: 3 BOTONES SIMÉTRICOS ===== */
   .actions-top{
@@ -68,14 +69,15 @@
     gap:8px;
     margin:8px 0 6px;
   }
-  #btnRot{ font-size:13.0px; }
+  .actions-top .btn{width:100%;}
+  #btnRot{ font-size:11.4px; } /* evita que el texto salga del botón */
 
   /* ===== BOTÓN PRINCIPAL (AGREGAR CAJERA) CON NEÓN ===== */
   .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;position:relative;}
   .btn--main{
     position:relative;
     font-size:15px; padding:12px 16px; min-width:220px;
-    background:#231a44;
+    background:#231a44; color:#fff;
     box-shadow:0 10px 28px rgba(127,92,255,.35), 0 0 22px rgba(127,92,255,.22);
   }
   .btn--main::before{
@@ -96,17 +98,18 @@
     50%    { transform:scale(1.06); opacity:1;   }
   }
 
-  /* ===== LISTA: NOMBRE | WAlink | BORRAR ===== */
+  /* ===== LISTA: NOMBRE | WA link | BORRAR ===== */
   #list{margin-top:24px;}
   .item{
     display:grid;
-    grid-template-columns: 108px 1fr 108px;
+    grid-template-columns: 108px minmax(180px,1fr) 108px; /* chico | grande | chico */
     gap:8px; align-items:center; margin:6px 0;
   }
+  .item *{box-sizing:border-box;} /* evita superposiciones */
   .item input, .item .btn{ height:36px; }
 
   .item .name{
-    width:108px;min-width:108px;max-width:108px;
+    width:100%;min-width:0;
     background:#2b2250;border:1px solid rgba(180,140,255,.35);
     border-radius:12px;padding:8px 10px;color:#fff;outline:none;font-size:12.5px;
   }
@@ -143,6 +146,16 @@
     .logo{width:216px;margin:8px auto -38px}
     .card-inner{padding:14px 10px}
     .btn{font-size:12.5px}
+    .btn--sm{height:34px;font-size:12px;padding:7px 9px}
+    /* fila compacta en móvil: mantiene 1 línea sin solaparse */
+    .item{
+      grid-template-columns: 96px minmax(120px,1fr) 90px;
+      gap:6px;
+    }
+    .item .name{font-size:12px;padding:7px 8px}
+    .item .url{font-size:12px;padding:7px 9px}
+    .item .btn{font-size:12px;padding:7px 8px;min-width:90px;max-width:90px}
+    #btnRot{ font-size:11px; }
   }
 </style>
 </head>
@@ -159,7 +172,7 @@
     <div class="card-inner">
       <h1>PANEL ADMIN</h1>
 
-      <!-- ORDEN CORREGIDO -->
+      <!-- TOP: tres iguales y alineados -->
       <div class="actions-top">
         <button class="btn btn--thin btn--sm" id="btnView">Ver lista</button>
         <button class="btn btn--thin btn--sm" id="btnRot">Resetear rotación</button>
@@ -172,7 +185,7 @@
 
       <div id="list"></div>
       <div class="save-wrap">
-        <button class="btn btn--thin" id="btnSaveFinal">Guardar</button>
+        <button class="btn btn--thin btn--sm" id="btnSaveFinal">Guardar</button>
       </div>
       <p id="msg"></p>
     </div>
