--- a/public/admin.html
+++ b/public/admin.html
@@ -202,17 +202,16 @@
   <div class="mini-inner">
     <p style="text-align:center;color:#dcd2ff;margin-bottom:10px;">Configuración</p>
 
-    <div class="row" style="justify-content:center;align-items:center;gap:10px;">
-      <label style="align-self:center;min-width:90px;color:#d7ccff;">Rotar cada</label>
-      <input id="blocksize" type="number" min="1" max="20" step="1" placeholder="2"
-             style="width:10px;text-align:center;">
-      <label style="align-self:center;color:#d7ccff;min-width:50px">clicks</label>
-      <button class="btn btn--thin btn--sm" id="btnSaveBS" style="width:150px;">Guardar</button>
+    <div class="row">
+      <label style="align-self:center;min-width:110px;color:#d7ccff;">Rotar cada</label>
+      <input id="blocksize" type="number" min="1" max="20" step="1" placeholder="2">
+      <label style="align-self:center;color:#d7ccff;min-width:60px;">clicks</label>
+      <button class="btn btn--thin btn--sm" id="btnSaveBS">Guardar</button>
     </div>
 
-    <div class="row" style="justify-content:center;align-items:center;gap:10px;">
-      <input id="token" type="text" placeholder="tok99-2025" style="flex:1;max-width:320px;">
-      <button class="btn btn--thin btn--sm" id="btnSaveToken" style="width:150px;">Activar token</button>
+    <div class="row">
+      <input id="token" type="text" placeholder="tok99-2025">
+      <button class="btn btn--thin btn--sm" id="btnSaveToken">Guardar token</button>
     </div>
   </div>
 </div>
