--- a/public/admin.html
+++ b/public/admin.html
@@ -48,6 +48,7 @@
     white-space:nowrap;font-weight:600;letter-spacing:.2px;text-align:center;
     box-shadow:0 6px 18px rgba(40,0,120,.22);z-index:0;
     display:flex;align-items:center;justify-content:center;
+    height:36px;font-size:12.5px;
   }
   .btn:hover{filter:brightness(1.08)}
   .btn > *{position:relative;z-index:2}
@@ -59,8 +60,6 @@
     -webkit-mask-composite:xor;mask-composite:exclude;padding:1px;
     filter:saturate(90%) blur(.15px) opacity(.85);
   }
-  /* tamaño compacto uniforme para botones chicos */
-  .btn--sm{height:36px;font-size:12.5px;padding:8px 10px}
 
   /* ===== TOP: 3 BOTONES SIMÉTRICOS ===== */
   .actions-top{
@@ -69,15 +68,14 @@
     gap:8px;
     margin:8px 0 6px;
   }
-  .actions-top .btn{width:100%;}
-  #btnRot{ font-size:11.4px; } /* evita que el texto salga del botón */
+  #btnRot{ font-size:11.4px; }
 
-  /* ===== BOTÓN PRINCIPAL (AGREGAR CAJERA) CON NEÓN ===== */
+  /* ===== BOTÓN PRINCIPAL (AGREGAR CAJERA) ===== */
   .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;position:relative;}
   .btn--main{
     position:relative;
     font-size:15px; padding:12px 16px; min-width:220px;
-    background:#231a44; color:#fff;
+    background:#231a44;
     box-shadow:0 10px 28px rgba(127,92,255,.35), 0 0 22px rgba(127,92,255,.22);
   }
   .btn--main::before{
@@ -98,18 +96,17 @@
     50%    { transform:scale(1.06); opacity:1;   }
   }
 
-  /* ===== LISTA: NOMBRE | WA link | BORRAR ===== */
+  /* ===== LISTA: NOMBRE | WALINK | BORRAR ===== */
   #list{margin-top:24px;}
   .item{
     display:grid;
-    grid-template-columns: 108px minmax(180px,1fr) 108px; /* chico | grande | chico */
+    grid-template-columns: 108px 1fr 108px;
     gap:8px; align-items:center; margin:6px 0;
   }
-  .item *{box-sizing:border-box;} /* evita superposiciones */
   .item input, .item .btn{ height:36px; }
 
   .item .name{
-    width:100%;min-width:0;
+    width:108px;min-width:108px;max-width:108px;
     background:#2b2250;border:1px solid rgba(180,140,255,.35);
     border-radius:12px;padding:8px 10px;color:#fff;outline:none;font-size:12.5px;
   }
@@ -125,7 +122,16 @@
 
   .save-wrap{display:flex;justify-content:center;margin:16px 0 6px}
 
-  /* Botón de estadísticas (entre tarjetas) */
+  /* ===== CAMPO NUMÉRICO COMPACTO ===== */
+  #blocksize {
+    width: 55px !important;
+    flex: 0 0 auto !important;
+    text-align: center;
+    padding: 6px 4px;
+    font-size: 13px;
+  }
+
+  /* ===== BOTÓN ESTADÍSTICAS ===== */
   .stats-card{
     margin:18px auto;
     padding:14px;
@@ -146,16 +152,6 @@
     .logo{width:216px;margin:8px auto -38px}
     .card-inner{padding:14px 10px}
     .btn{font-size:12.5px}
-    .btn--sm{height:34px;font-size:12px;padding:7px 9px}
-    /* fila compacta en móvil: mantiene 1 línea sin solaparse */
-    .item{
-      grid-template-columns: 96px minmax(120px,1fr) 90px;
-      gap:6px;
-    }
-    .item .name{font-size:12px;padding:7px 8px}
-    .item .url{font-size:12px;padding:7px 9px}
-    .item .btn{font-size:12px;padding:7px 8px;min-width:90px;max-width:90px}
-    #btnRot{ font-size:11px; }
   }
 </style>
 </head>
@@ -172,7 +168,7 @@
     <div class="card-inner">
       <h1>PANEL ADMIN</h1>
 
-      <!-- TOP: tres iguales y alineados -->
+      <!-- ORDEN CORREGIDO -->
       <div class="actions-top">
         <button class="btn btn--thin btn--sm" id="btnView">Ver lista</button>
         <button class="btn btn--thin btn--sm" id="btnRot">Resetear rotación</button>
@@ -185,7 +181,7 @@
 
       <div id="list"></div>
       <div class="save-wrap">
-        <button class="btn btn--thin btn--sm" id="btnSaveFinal">Guardar</button>
+        <button class="btn btn--thin" id="btnSaveFinal">Guardar</button>
       </div>
       <p id="msg"></p>
     </div>
@@ -198,20 +194,21 @@
   </div>
 
   <!-- Mini tarjeta inferior -->
-<div class="card-mini">
-  <div class="mini-inner">
-    <p style="text-align:center;color:#dcd2ff;margin-bottom:10px;">Configuración</p>
+  <div class="card-mini">
+    <div class="mini-inner">
+      <p style="text-align:center;color:#dcd2ff;margin-bottom:10px;">Configuración</p>
 
-    <div class="row">
-      <label style="align-self:center;min-width:110px;color:#d7ccff;">Rotar cada</label>
-      <input id="blocksize" type="number" min="1" max="20" step="1" placeholder="2">
-      <label style="align-self:center;color:#d7ccff;min-width:60px;">clicks</label>
-      <button class="btn btn--thin btn--sm" id="btnSaveBS">Guardar</button>
-    </div>
+      <div class="row">
+        <label style="align-self:center;min-width:110px;color:#d7ccff;">Rotar cada</label>
+        <input id="blocksize" type="number" min="1" max="20" step="1" placeholder="2">
+        <label style="align-self:center;color:#d7ccff;min-width:60px">clicks</label>
+        <button class="btn btn--thin btn--sm" id="btnSaveBS">Guardar</button>
+      </div>
 
-    <div class="row">
-      <input id="token" type="text" placeholder="tok99-2025">
-      <button class="btn btn--thin btn--sm" id="btnSaveToken">Guardar token</button>
+      <div class="row">
+        <input id="token" type="text" placeholder="tok99-2025">
+        <button class="btn btn--thin btn--sm" id="btnSaveToken">Guardar token</button>
+      </div>
     </div>
   </div>
 </div>
