--- a/public/admin.html
+++ b/public/admin.html
@@ -34,7 +34,7 @@
   h1{text-align:center;margin:2px 0 8px;font-size:24px;letter-spacing:.4px}
   p,small{color:var(--muted);text-align:center;margin:0}
 
-  .row{display:flex;gap:8px;margin:8px 0;flex-wrap:wrap;align-items:center}
+  .row{display:flex;gap:8px;margin:8px 0;flex-wrap:wrap}
   input[type=text],input[type=number]{
     flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.35);
     border-radius:12px;padding:10px 12px;color:#fff;outline:none;
@@ -64,7 +64,7 @@
   /* ===== TOP: 3 BOTONES SIMÉTRICOS ===== */
   .actions-top{
     display:grid;
-    grid-template-columns:1fr 1fr 1fr;
+    grid-template-columns:1fr 1fr 1fr; /* tres iguales */
     gap:8px;
     margin:8px 0 6px;
   }
@@ -122,28 +122,13 @@
 
   .save-wrap{display:flex;justify-content:center;margin:16px 0 6px}
 
-  /* ===== AJUSTE DE FILA ROTAR CADA ===== */
-  .row-rotar {
-    display: flex;
-    align-items: center;
-    gap: 4px;
-  }
+  /* ===== CAMPO NUMÉRICO COMPACTO ===== */
   #blocksize {
     width: 55px !important;
     flex: 0 0 auto !important;
     text-align: center;
     padding: 6px 4px;
     font-size: 13px;
-    margin: 0 2px;
-  }
-  .row-rotar label {
-    margin: 0 2px;
-  }
-
-  /* ===== ANCHOS IGUALES ===== */
-  #btnSaveBS, #btnSaveToken {
-    min-width: 150px;
-    justify-content: center;
   }
 
   /* ===== BOTÓN ESTADÍSTICAS ===== */
@@ -167,8 +152,6 @@
     .logo{width:216px;margin:8px auto -38px}
     .card-inner{padding:14px 10px}
     .btn{font-size:12.5px}
-    .row-rotar{gap:3px}
-    #btnSaveBS, #btnSaveToken { min-width: 160px; }
   }
 </style>
 </head>
@@ -180,10 +163,12 @@
     <img class="logo" src="/insomnia-logo.png" alt="Insomnia Logo">
   </div>
 
+  <!-- Tarjeta principal -->
   <div class="card">
     <div class="card-inner">
       <h1>PANEL ADMIN</h1>
 
+      <!-- ORDEN CORREGIDO -->
       <div class="actions-top">
         <button class="btn btn--thin btn--sm" id="btnView">Ver lista</button>
         <button class="btn btn--thin btn--sm" id="btnRot">Resetear rotación</button>
@@ -202,19 +187,21 @@
     </div>
   </div>
 
+  <!-- Botón Estadísticas -->
   <div class="stats-card" id="btnStats">
     <div class="stats-icon"></div>
     <span>Estadísticas</span>
   </div>
 
+  <!-- Mini tarjeta inferior -->
   <div class="card-mini">
     <div class="mini-inner">
       <p style="text-align:center;color:#dcd2ff;margin-bottom:10px;">Configuración</p>
 
-      <div class="row row-rotar">
-        <label style="min-width:90px;color:#d7ccff;">Rotar cada</label>
+      <div class="row">
+        <label style="align-self:center;min-width:110px;color:#d7ccff;">Rotar cada</label>
         <input id="blocksize" type="number" min="1" max="20" step="1" placeholder="2">
-        <label style="color:#d7ccff;min-width:45px">clicks</label>
+        <label style="align-self:center;color:#d7ccff;min-width:60px">clicks</label>
         <button class="btn btn--thin btn--sm" id="btnSaveBS">Guardar</button>
       </div>
 
@@ -227,7 +214,105 @@
 </div>
 
 <script>
-// (mismo JS que antes, sin tocar)
+// ===== Fondo partículas =====
+const c=document.getElementById("bg"),x=c.getContext("2d");
+let P=[];function rs(){c.width=innerWidth;c.height=innerHeight}addEventListener("resize",rs);rs();
+for(let i=0;i<90;i++)P.push({x:Math.random()*c.width,y:Math.random()*c.height,vx:(Math.random()-.5)*.28,vy:(Math.random()-.5)*.28,r:Math.random()*2+.7});
+(function anim(){const grad=x.createRadialGradient(c.width*0.3,c.height*0.1,0,c.width*0.3,c.height*0.1,Math.max(c.width,c.height));
+const cs=p=>getComputedStyle(document.documentElement).getPropertyValue(p).trim();
+grad.addColorStop(0,cs('--bg1'));grad.addColorStop(1,cs('--bg2'));
+x.fillStyle=grad;x.fillRect(0,0,c.width,c.height);x.fillStyle=cs('--particle');
+for(const p of P){p.x+=p.vx;p.y+=p.vy;if(p.x<0||p.x>c.width)p.vx*=-1;if(p.y<0||p.y>c.height)p.vy*=-1;x.beginPath();x.arc(p.x,p.y,p.r,0,6.283);x.fill();}
+requestAnimationFrame(anim);})();
+
+// ===== Panel =====
+const $=s=>document.querySelector(s);
+const list=$("#list"),msg=$("#msg"),tokenInput=$("#token"),bsInput=$("#blocksize");
+
+function row(val={name:"",url:""}) {
+  if(typeof val==="string") val={name:"",url:val};
+  const d=document.createElement("div");d.className="item";
+  const iName=document.createElement("input");iName.type="text";iName.placeholder="Nombre";iName.className="name";iName.value=val.name||"";
+  const iUrl=document.createElement("input");iUrl.type="text";iUrl.placeholder="https://wa.me/...";iUrl.className="url";iUrl.value=val.url||"";
+  const b=document.createElement("button");b.className="btn btn--thin btn--sm";b.textContent="Borrar";b.onclick=()=>d.remove();
+  d.append(iName,iUrl,b);list.append(d);
+}
+function values(){
+  return [...list.querySelectorAll(".item")].map(el=>{
+    const name=el.querySelector(".name")?.value.trim()||"";
+    const url=el.querySelector(".url")?.value.trim()||"";
+    return url?{name,url}:null;
+  }).filter(Boolean);
+}
+function show(t,ok=1){msg.textContent=t;msg.className=ok?"ok":"err"}
+
+$("#btnSaveToken").onclick=()=>{localStorage.setItem("adm_tok",tokenInput.value.trim());show("Token guardado")};
+
+window.onload=async()=>{const t=localStorage.getItem("adm_tok");if(t)tokenInput.value=t;if(t){await loadBlockSize(t);}};
+
+$("#btnView").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  try{
+    show("Cargando...");
+    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&get=1`);
+    const j=await r.json();
+    list.innerHTML="";(j.links||[]).forEach(o=>row(o));
+    if((j.links||[]).length===0)row();
+    show("Lista cargada");
+  }catch(e){show("Error al cargar",0);}
+};
+
+$("#btnReset").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  try{
+    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&reset=1`);
+    const j=await r.json();list.innerHTML="";row();
+    show(j.ok?"Lista borrada":"Error",j.ok);
+  }catch(e){show("Error",0);}
+};
+
+$("#btnRot").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  try{
+    const r=await fetch(`/api/rotate-reset?token=${encodeURIComponent(t)}`);
+    const j=await r.json();show(j.ok?"Rotación reiniciada":"Error",j.ok);
+  }catch(e){show("Error",0);}
+};
+
+$("#btnAdd").onclick=()=>row();
+
+$("#btnSaveFinal").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  const vals=values();if(!vals.length)return show("Nada que guardar",0);
+  try{
+    show("Guardando...");
+    const r=await fetch(`/api/admin-post?token=${encodeURIComponent(t)}`,{
+      method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(vals)
+    });
+    const j=await r.json();show(j.ok?`Guardado (${j.saved})`:"Error al guardar",j.ok);
+  }catch(e){show("Error al guardar",0);}
+};
+
+async function loadBlockSize(t){
+  try{
+    const r=await fetch(`/api/blocksize?token=${encodeURIComponent(t)}&get=1`);
+    const j=await r.json();if(j.ok&&j.value!==undefined)bsInput.value=j.value;
+  }catch(e){}
+}
+
+$("#btnSaveBS").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  const v=Number(bsInput.value);
+  if(!Number.isInteger(v)||v<1||v>20)return show("Valor inválido (1 a 20)",0);
+  try{
+    const r=await fetch(`/api/blocksize?token=${encodeURIComponent(t)}`,{
+      method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({value:v})
+    });
+    const j=await r.json();show(j.ok?`Block size guardado (${v})`:"Error al guardar",j.ok);
+  }catch(e){show("Error al guardar",0);}
+};
+
+$("#btnStats").onclick=()=>show("📊 Próximamente: Conteo de mensajes y métricas.",1);
 </script>
 </body>
 </html>
